--- a/Back/.env
+++ b/Back/.env
@@ -1,4 +1,4 @@
 PORT=3000
-MONGO_URI=mongodb+srv://orenitdep:123Lol123@orenmiz.gx3kc.mongodb.net/?retryWrites=true&w=majority&appName=OrenMiz/MyCall
-LOGIN_PASS=123Lol123
+MONGO_URI=
+LOGIN_PASS=123
 JWT_SECRET=123ASDFasydm8fn3q0e81n21341723401
